--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.13.2",
+    "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/supabase": "^1.5.0",
+    "@tailwindcss/vite": "^4.1.3",
+    "cookie": "^0.7.2",
     "nuxt": "^3.16.2",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
